--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-	<key>URL</key>
-	<string>https://am.tumo.world/file/get?id=61c5cf174e6ca343d964e493</string>
-</dict>
-</plist>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>           
+    <script type="text/javascript" src="script.js"></script>                            
+    <script type="text/javascript" src="class.js"></script>                    
+    <script type="text/javascript" src="Grass.js"></script>
+    <script type="text/javascript" src="Bactgood.js"></script>
+    <script type="text/javascript" src="Bact.js"></script>
+    <script type="text/javascript" src="Preadtor.js"></script>
+    <script type="text/javascript" src="GrassEater.js"></script>
+
+
+</body>
+</html>
